add characters and planets on film detail page

--- a/film.html
+++ b/film.html
@@ -13,6 +13,14 @@
 <body>
     <main>
         <p><span id="film"></span></p>
+        <section id="characters">
+            <h2>Characters appeared in this film</h2>
+            <ul></ul>
+        </section>
+        <section id="planets">
+            <h2>Planets appeared in this film</h2>
+            <ul></ul>
+        </section>
     </main>
 </body>
 
