touch up styling

--- a/film.html
+++ b/film.html
@@ -12,7 +12,9 @@
 
 <body>
     <main>
-        <p><span id="film"></span></p>
+        <section id="generalInfo">
+            <p><span id="film"></span></p>
+        </section>
         <section id="characters">
             <h2>Characters appeared in this film</h2>
             <ul></ul>
