--- a/planet.html
+++ b/planet.html
@@ -12,7 +12,9 @@
 
 <body>
     <main>
-        <p><span id="planet"></span></p>
+        <section id="generalInfo">
+            <p><span id="planet"></span></p>
+        </section>
         <section id="films">
             <h2>Appeared in below films:</h2>
             <ul></ul>
